@@ -19,6 +19,7 @@
 
 package geomerative ;
 import processing.core.*;
+import java.util.Vector;
 
 /**
  * @extended
@@ -35,7 +36,7 @@ public class RCommand extends RGeomElem
   public RPoint endPoint;
   int commandType;
 
-  RPoint[] curvePoints;
+  Vector<RPoint> curvePoints; // RPoint[] curvePoints;
 
   /**
    * @invisible
@@ -485,6 +486,7 @@ public class RCommand extends RGeomElem
 
 
     RPoint[] result = null;
+    Vector<RPoint> resultVector = null;
     switch(segmentType){
     case ADAPTATIVE:
       switch(commandType){
@@ -496,13 +498,13 @@ public class RCommand extends RGeomElem
 
       case QUADBEZIERTO:
         quadBezierAdaptative();
-        result = curvePoints;
+        resultVector = curvePoints;
         curvePoints = null;
         break;
 
       case CUBICBEZIERTO:
         cubicBezierAdaptative();
-        result = curvePoints;
+        resultVector = curvePoints;
         curvePoints = null;
         break;
       }
@@ -512,19 +514,19 @@ public class RCommand extends RGeomElem
       switch(commandType){
       case LINETO:
         lineUniformLength();
-        result = curvePoints;
+        resultVector = curvePoints;
         curvePoints = null;
         break;
 
       case QUADBEZIERTO:
         quadBezierUniformLength();
-        result = curvePoints;
+        resultVector = curvePoints;
         curvePoints = null;
         break;
 
       case CUBICBEZIERTO:
         cubicBezierUniformLength();
-        result = curvePoints;
+        resultVector = curvePoints;
         curvePoints = null;
         break;
       }
@@ -535,7 +537,7 @@ public class RCommand extends RGeomElem
       case LINETO:
         if(segmentLines){
           lineUniformStep();
-          result = curvePoints;
+          resultVector = curvePoints;
           curvePoints = null;
         }else{
           result = new RPoint[2];
@@ -546,13 +548,13 @@ public class RCommand extends RGeomElem
 
       case QUADBEZIERTO:
         quadBezierUniformStep();
-        result = curvePoints;
+        resultVector = curvePoints;
         curvePoints = null;
         break;
 
       case CUBICBEZIERTO:
         cubicBezierUniformStep();
-        result = curvePoints;
+        resultVector = curvePoints;
         curvePoints = null;
         break;
       }
@@ -564,6 +566,7 @@ public class RCommand extends RGeomElem
       restoreSegmentatorContext();
     }
 
+    if( resultVector != null ) result = resultVector.toArray(new RPoint[0]);
     return result;
   }
 
@@ -1616,6 +1619,9 @@ public class RCommand extends RGeomElem
 
   private void addCurvePoint(RPoint nextcurvepoint)
   {
+    if( curvePoints == null ) curvePoints = new Vector<RPoint>();
+    curvePoints.add(nextcurvepoint);
+    /*
     RPoint[] newcurvePoints;
     if(curvePoints==null){
       newcurvePoints = new RPoint[1];
@@ -1626,6 +1632,7 @@ public class RCommand extends RGeomElem
       newcurvePoints[curvePoints.length]=nextcurvepoint;
     }
     this.curvePoints=newcurvePoints;
+    */
   }
 
   public RPoint[] intersectionPoints(RCommand other)
